@@ -41,21 +41,21 @@ Plate - Fast templating engine with support for embedded Perl
 my $re_pre = qr'(.*?)(?:
     ^%%\h*(\V*?)\h*(?:\R|\z)|
     ^<%%(perl)>(?:\R|\z)(?:(.*?)^</%%\g-2>(?:\R|\z))?|
-    ^<%%def\h+([\w/\.-]+)>(?:\R|\z)|
+    ^<%%(def|filter)\h+([\w/\.-]+)>(?:\R|\z)|
     <%%(\s*(?:\#.+?)?)%%>|
     <%%\s*(.+?)\s*(?:\|\h*(|\w+(?:\s*\|\h*\w+)*)\s*)?%%>|
     <&&(\|)?\s*(.+?)\s*(?:\|\h*(|\w+(?:\s*\|\h*\w+)*)\s*)?&&>|
-    </(%%def|%%perl)>(?:\R|\z)|
+    </(%%def|%%filter|%%perl)>(?:\R|\z)|
     </(&&)>|\z
 )'mosx;
 my $re_run = qr'(.*?)(?:
     ^%\h*(\V*?)\h*(?:\R|\z)|
     ^<%(perl)>(?:\R|\z)(?:(.*?)^</%\g-2>(?:\R|\z))?|
-    ^<%def\h+([\w/\.-]+)>(?:\R|\z)|
+    ^<%(def|filter)\h+([\w/\.-]+)>(?:\R|\z)|
     <%(\s*(?:\#.+?)?)%>|
     <%\s*(.+?)\s*(?:\|\h*(|\w+(?:\s*\|\h*\w+)*)\s*)?%>|
     <&(\|)?\s*(.+?)\s*(?:\|\h*(|\w+(?:\s*\|\h*\w+)*)\s*)?&>|
-    </(%def|%perl)>(?:\R|\z)|
+    </(%def|%filter|%perl)>(?:\R|\z)|
     </(&)>|\z
 )'mosx;
 
@@ -83,10 +83,7 @@ sub _parse_fltr {
     my $expr = $_[0];
     $expr .= "//''" unless $$Plate::_s{keep_undef};
     if (length $_[1]) {
-        for (split /\s*\|\s*/, $_[1]) {
-            exists $$Plate::_s{filters}{$_} or croak "No '$_' filter defined";
-            $expr = "Plate::_f($_=>$expr)";
-        }
+        $expr = "Plate::_f($_=>$expr)" for split /\s*\|\s*/, $_[1];
     } elsif (not $$Plate::_s{keep_undef}) {
         $expr = "($expr)";
     }
@@ -146,54 +143,57 @@ sub _parse {
             $stmt .= "\n$4\n";
 
         } elsif (defined $5) {
-            # <%def ...>
+            # <%def ...> or <%filter ...>
             $expr2stmt->();
-            local $_[3] = ($pre && '%').'%def';
-            $stmt .= 'local$$Plate::_s{mem}{'._parse_defn($5)."}=\nsub{".&_parse.'};';
+            local $_[3] = ($pre && '%')."%$5";
+            my $n = _parse_defn $6;
+            $stmt .= $5 eq 'def'
+            ? "local\$\$Plate::_s{mem}{$n}=\nsub{".&_parse.'};'
+            : "local\$\$Plate::_s{filters}{$n}=\nsub{my\$_c=\$_[0];local\@Plate::_c=sub{\$_c};".&_parse.'};';
 
-        } elsif (defined $6) {
+        } elsif (defined $7) {
             # <%# ... %>
-            my $add_lines = $6 =~ tr/\n//;
+            my $add_lines = $7 =~ tr/\n//;
             (@expr ? $expr[-1] : defined $stmt ? $stmt : ($expr[0] = "''")) .= "\n" x $add_lines if $add_lines;
             $fix_line_num = @expr if $fix_line_num;
 
-        } elsif (defined $7) {
+        } elsif (defined $8) {
             # <% ... %>
-            my $nl1 = "\n" x substr($_[0], $+[1], $-[7] - $+[1]) =~ tr/\n//;
-            my $nl2 = "\n" x substr($_[0], $+[7], $+[0] - $+[7]) =~ tr/\n//;
+            my $nl1 = "\n" x substr($_[0], $+[1], $-[8] - $+[1]) =~ tr/\n//;
+            my $nl2 = "\n" x substr($_[0], $+[8], $+[0] - $+[8]) =~ tr/\n//;
             $expr2stmt->(1) if $fix_line_num;
             $fix_line_num = push @expr,
-            _parse_fltr "do{$nl1$7}$nl2", $8 // $$Plate::_s{auto_filter};
+            _parse_fltr "do{$nl1$8}$nl2", $9 // $$Plate::_s{auto_filter};
             $expr2stmt->() if $pre;
 
-        } elsif (defined $10) {
+        } elsif (defined $11) {
             # <& ... &> or <&| ... &>
-            my $nl = "\n" x (substr($_[0], $+[1], $+[0] - $+[1]) =~ tr/\n// - $10 =~ tr/\n//);
-            my($tmpl, $args) = do { $10 =~ /^([\w\/\.-]+)\s*(?:,\s*(.*))?$/s };
+            my $nl = "\n" x (substr($_[0], $+[1], $+[0] - $+[1]) =~ tr/\n// - $11 =~ tr/\n//);
+            my($tmpl, $args) = do { $11 =~ /^([\w\/\.-]+)\s*(?:,\s*(.*))?$/s };
             $expr2stmt->(!$pre) if $pre or $fix_line_num;
             if (defined $tmpl) {
                 if ($tmpl eq '_') {
-                    $fix_line_num = push @expr, _parse_fltr defined $9
+                    $fix_line_num = push @expr, _parse_fltr defined $10
                     ? do {
                         $args = defined $args ? "($args)" : '';
                         local $_[3] = $pre ? '&&' : '&';
                         '(@Plate::_c?do{local@Plate::_c=@Plate::_c;&{splice@Plate::_c,-1,1,sub{'.&_parse."}}$args}:undef)$nl"
                     }
-                    : defined $args ? "do{Plate::content($args)}$nl" : "do{&Plate::content}$nl", $11;
+                    : defined $args ? "do{Plate::content($args)}$nl" : "do{&Plate::content}$nl", $12;
                     $expr2stmt->() if $pre and $nl;
                     next;
                 }
                 $tmpl = defined $args ? "Plate::_r('$tmpl',($args)," : "Plate::_r('$tmpl',";
             } else {
-                $tmpl = "Plate::_r($10,";
+                $tmpl = "Plate::_r($11,";
             }
             $fix_line_num = push @expr,
-            _parse_fltr "do{$tmpl".(defined $9 ? (local $_[3] = $pre ? '&&' : '&', 'sub{'.&_parse.'}') : 'undef').")}$nl", $11;
+            _parse_fltr "do{$tmpl".(defined $10 ? (local $_[3] = $pre ? '&&' : '&', 'sub{'.&_parse.'}') : 'undef').")}$nl", $12;
             $expr2stmt->() if $pre and $nl;
 
         } else {
             # </%...> or </&> or \z
-            my $tag = $12 // $13 // '';
+            my $tag = $13 // $14 // '';
             if ($tag ne $_[3]) {
                 my $line = 1 + join('', $stmt // '', @expr) =~ y/\n//;
                 $line = "$_[2] line $line.\nPlate ".($pre && 'pre').'compilation failed';
@@ -209,7 +209,7 @@ sub _parse {
             }
             : @expr ? join('.', @expr) : "''";
             $pl .= '=~s/\R\z//r' if !$pre and $$Plate::_s{chomp};
-            $pl .= "\n" if defined $12;
+            $pl .= "\n" if defined $13;
             return $pl;
         }
 
@@ -372,7 +372,7 @@ caching compiled templates,
 variable escaping/filtering,
 localised global variables.
 Templates can also include other templates, with optional content
-and even define or override templates locally.
+and even define or override templates & filters locally.
 
 All templates have strict, warnings, utf8 and Perl 5.20 features enabled.
 
@@ -461,12 +461,6 @@ Newline characters can be escaped with a backslash, Eg:
 
 This will result in the output C<abc>, all on one line.
 
-=head3 Content
-
-    <& _ &>
-
-A template can be served with content. This markup will insert the content provided, if any.
-
 =head3 Include other templates
 
     <& header, 'My Title' &>
@@ -485,6 +479,12 @@ A template can include other templates with optional arguments.
 
 An included template can have its own content passed in.
 
+=head3 Content
+
+    <& _ &>
+
+A template can be served with content. This markup will insert the content provided, if any.
+
 =head3 Def blocks
 
     <%def copyright>
@@ -494,7 +494,23 @@ An included template can have its own content passed in.
     <& copyright, 2018 &>
 
 Local templates can be defined in a template.
-They can even override existing templates.
+They will override existing templates until the end of the template or block.
+
+=head3 Filter blocks
+
+    <%filter one_line>
+    <% $_[0] =~ tr/\n/ / |%>
+    </%filter>
+    
+    <%filter bold>
+    <b><& _ &></b>
+    </%filter>
+    
+    <% "Single\nLine\nOnly" |one_line |bold %>
+
+Local filters can also be defined in a template.
+They will override existing filters until the end of the template or block.
+The text to be filtered will be passed in as the only argument and also as content.
 
 =head1 SUBROUTINES/METHODS
 
